# election-assistant

./: .gitignore  .impeccable-live.json  DESIGN.json  DESIGN.md  Dockerfile  PRODUCT.md  README.md  cleanup.py  pyproject.toml  requirements.txt
.codex-home-test/: config.toml  installation_id
.github/workflows/: ci.yml
app/: ai_chain.py  analytics.py  ask_why.py  auth.py  chat.py  checklist.py  csrf.py  db.py  kb.py  main.py  map.py  models.py  nlp_service.py  querylog.py  quiz.py  rag_engine.py  readiness.py  scenarios.py  security.py  stats.py  timeline.py  translate_service.py  wizard.py
config/: anchor_dates.json
docs/: AUDIT-REPORT.md  CONTRIBUTING.md  DESIGN-CRAFT-IMPLEMENTATION.md  OPTIMIZATION-FIXES.md  POLISH-PASS.md  SECURITY-AND-DEPLOYMENT.md  SUBMISSION-CHECKLIST.md
knowledge_base/: absentee_vs_inperson.md  moved_wrong_precinct.md  signature_verification.md  us-eligibility-pollbooks.md
scripts/: refresh_kb.py
templates/: ask_why_partial.html  base.html  chat.html  chat_messages.html  checklist.html  checklist_score.html  evm_demo.html  index.html  map.html  map_result.html  profile.html  scenario_result.html  scenarios.html  scenarios_partial.html  stats.html  timeline.html
tests/: conftest.py  strategies.py  test_ai_chain.py  test_analytics.py  test_ask_why.py  test_auth.py  test_chat.py  test_checklist.py  test_csrf.py  test_deadline_validator_props.py  test_main.py  test_map.py  test_nlp_service.py  test_quiz_props.py  test_readiness_props.py  test_scenarios.py  test_security.py  test_timeline.py  test_translate_service.py
(+1811 files in other folders)
